Fixed spacing on Techniques block

--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,7 +1,8 @@
 .cards__image {
-  margin: 60px 40px 43px 40px;
+  margin: 60px auto 43px auto;
   border-radius: 50%;
   height: 160px;
   width: 160px;
   display: block;
+
 }
